--- a/plugin/menu/menu.css
+++ b/plugin/menu/menu.css
@@ -239,7 +239,7 @@
 .reveal .slide-menu-button {
 	position: fixed;
 	left: 30px;
-	bottom: 30px;
+	top: 30px;  /* bottom: 30px; */
 	z-index: 30;
 	font-size: 24px;
 }
